parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALWAYS
    BEGIN
    CASE
    DEFAULT
    ELSE
    END
    ENDCASE
    ENDFUNCTION
    ENDTASK
    FOR
    FOREVER
    FUNCTION
    IF
    INITIAL
    LBRACE
    NEGEDGE
    POSEDGE
    RBRACE
    REG
    REPEAT
    TASK
    WHILE

Grammar

Rule 0     S' -> module
Rule 1     module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE
Rule 2     port_list -> port
Rule 3     port_list -> port_list COMMA port
Rule 4     port -> INPUT IDENTIFIER
Rule 5     port -> OUTPUT IDENTIFIER
Rule 6     module_items -> module_item
Rule 7     module_items -> module_items module_item
Rule 8     module_item -> wire_declaration
Rule 9     module_item -> assignment
Rule 10    wire_declaration -> WIRE IDENTIFIER SEMI
Rule 11    assignment -> ASSIGN IDENTIFIER EQ expression SEMI
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression TIMES expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> expression AND expression
Rule 17    expression -> expression OR expression
Rule 18    expression -> expression EQEQ expression
Rule 19    expression -> expression NEQ expression
Rule 20    expression -> expression LT expression
Rule 21    expression -> expression LE expression
Rule 22    expression -> expression GT expression
Rule 23    expression -> expression GE expression
Rule 24    expression -> expression BITAND expression
Rule 25    expression -> expression BITOR expression
Rule 26    expression -> expression BITXOR expression
Rule 27    expression -> expression LSHIFT expression
Rule 28    expression -> expression RSHIFT expression
Rule 29    expression -> MINUS expression
Rule 30    expression -> NOT expression
Rule 31    expression -> BITNOT expression
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    expression -> NUMBER
Rule 34    expression -> IDENTIFIER

Terminals, with rules where they appear

ALWAYS               : 
AND                  : 16
ASSIGN               : 11
BEGIN                : 
BITAND               : 24
BITNOT               : 31
BITOR                : 25
BITXOR               : 26
CASE                 : 
COMMA                : 3
DEFAULT              : 
DIVIDE               : 15
ELSE                 : 
END                  : 
ENDCASE              : 
ENDFUNCTION          : 
ENDMODULE            : 1
ENDTASK              : 
EQ                   : 11
EQEQ                 : 18
FOR                  : 
FOREVER              : 
FUNCTION             : 
GE                   : 23
GT                   : 22
IDENTIFIER           : 1 4 5 10 11 34
IF                   : 
INITIAL              : 
INPUT                : 4
LBRACE               : 
LE                   : 21
LPAREN               : 1 32
LSHIFT               : 27
LT                   : 20
MINUS                : 13 29
MODULE               : 1
NEGEDGE              : 
NEQ                  : 19
NOT                  : 30
NUMBER               : 33
OR                   : 17
OUTPUT               : 5
PLUS                 : 12
POSEDGE              : 
RBRACE               : 
REG                  : 
REPEAT               : 
RPAREN               : 1 32
RSHIFT               : 28
SEMI                 : 1 10 11
TASK                 : 
TIMES                : 14
WHILE                : 
WIRE                 : 10
error                : 

Nonterminals, with rules where they appear

assignment           : 9
expression           : 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 30 31 32
module               : 0
module_item          : 6 7
module_items         : 1 7
port                 : 2 3
port_list            : 1 3
wire_declaration     : 8

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE

    MODULE          shift and go to state 2

    module                         shift and go to state 1

state 1

    (0) S' -> module .



state 2

    (1) module -> MODULE . IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE

    IDENTIFIER      shift and go to state 3


state 3

    (1) module -> MODULE IDENTIFIER . LPAREN port_list RPAREN SEMI module_items ENDMODULE

    LPAREN          shift and go to state 4


state 4

    (1) module -> MODULE IDENTIFIER LPAREN . port_list RPAREN SEMI module_items ENDMODULE
    (2) port_list -> . port
    (3) port_list -> . port_list COMMA port
    (4) port -> . INPUT IDENTIFIER
    (5) port -> . OUTPUT IDENTIFIER

    INPUT           shift and go to state 7
    OUTPUT          shift and go to state 8

    port_list                      shift and go to state 5
    port                           shift and go to state 6

state 5

    (1) module -> MODULE IDENTIFIER LPAREN port_list . RPAREN SEMI module_items ENDMODULE
    (3) port_list -> port_list . COMMA port

    RPAREN          shift and go to state 9
    COMMA           shift and go to state 10


state 6

    (2) port_list -> port .

    RPAREN          reduce using rule 2 (port_list -> port .)
    COMMA           reduce using rule 2 (port_list -> port .)


state 7

    (4) port -> INPUT . IDENTIFIER

    IDENTIFIER      shift and go to state 11


state 8

    (5) port -> OUTPUT . IDENTIFIER

    IDENTIFIER      shift and go to state 12


state 9

    (1) module -> MODULE IDENTIFIER LPAREN port_list RPAREN . SEMI module_items ENDMODULE

    SEMI            shift and go to state 13


state 10

    (3) port_list -> port_list COMMA . port
    (4) port -> . INPUT IDENTIFIER
    (5) port -> . OUTPUT IDENTIFIER

    INPUT           shift and go to state 7
    OUTPUT          shift and go to state 8

    port                           shift and go to state 14

state 11

    (4) port -> INPUT IDENTIFIER .

    RPAREN          reduce using rule 4 (port -> INPUT IDENTIFIER .)
    COMMA           reduce using rule 4 (port -> INPUT IDENTIFIER .)


state 12

    (5) port -> OUTPUT IDENTIFIER .

    RPAREN          reduce using rule 5 (port -> OUTPUT IDENTIFIER .)
    COMMA           reduce using rule 5 (port -> OUTPUT IDENTIFIER .)


state 13

    (1) module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI . module_items ENDMODULE
    (6) module_items -> . module_item
    (7) module_items -> . module_items module_item
    (8) module_item -> . wire_declaration
    (9) module_item -> . assignment
    (10) wire_declaration -> . WIRE IDENTIFIER SEMI
    (11) assignment -> . ASSIGN IDENTIFIER EQ expression SEMI

    WIRE            shift and go to state 19
    ASSIGN          shift and go to state 20

    module_items                   shift and go to state 15
    module_item                    shift and go to state 16
    wire_declaration               shift and go to state 17
    assignment                     shift and go to state 18

state 14

    (3) port_list -> port_list COMMA port .

    RPAREN          reduce using rule 3 (port_list -> port_list COMMA port .)
    COMMA           reduce using rule 3 (port_list -> port_list COMMA port .)


state 15

    (1) module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items . ENDMODULE
    (7) module_items -> module_items . module_item
    (8) module_item -> . wire_declaration
    (9) module_item -> . assignment
    (10) wire_declaration -> . WIRE IDENTIFIER SEMI
    (11) assignment -> . ASSIGN IDENTIFIER EQ expression SEMI

    ENDMODULE       shift and go to state 21
    WIRE            shift and go to state 19
    ASSIGN          shift and go to state 20

    module_item                    shift and go to state 22
    wire_declaration               shift and go to state 17
    assignment                     shift and go to state 18

state 16

    (6) module_items -> module_item .

    ENDMODULE       reduce using rule 6 (module_items -> module_item .)
    WIRE            reduce using rule 6 (module_items -> module_item .)
    ASSIGN          reduce using rule 6 (module_items -> module_item .)


state 17

    (8) module_item -> wire_declaration .

    ENDMODULE       reduce using rule 8 (module_item -> wire_declaration .)
    WIRE            reduce using rule 8 (module_item -> wire_declaration .)
    ASSIGN          reduce using rule 8 (module_item -> wire_declaration .)


state 18

    (9) module_item -> assignment .

    ENDMODULE       reduce using rule 9 (module_item -> assignment .)
    WIRE            reduce using rule 9 (module_item -> assignment .)
    ASSIGN          reduce using rule 9 (module_item -> assignment .)


state 19

    (10) wire_declaration -> WIRE . IDENTIFIER SEMI

    IDENTIFIER      shift and go to state 23


state 20

    (11) assignment -> ASSIGN . IDENTIFIER EQ expression SEMI

    IDENTIFIER      shift and go to state 24


state 21

    (1) module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE .

    $end            reduce using rule 1 (module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE .)


state 22

    (7) module_items -> module_items module_item .

    ENDMODULE       reduce using rule 7 (module_items -> module_items module_item .)
    WIRE            reduce using rule 7 (module_items -> module_items module_item .)
    ASSIGN          reduce using rule 7 (module_items -> module_items module_item .)


state 23

    (10) wire_declaration -> WIRE IDENTIFIER . SEMI

    SEMI            shift and go to state 25


state 24

    (11) assignment -> ASSIGN IDENTIFIER . EQ expression SEMI

    EQ              shift and go to state 26


state 25

    (10) wire_declaration -> WIRE IDENTIFIER SEMI .

    ENDMODULE       reduce using rule 10 (wire_declaration -> WIRE IDENTIFIER SEMI .)
    WIRE            reduce using rule 10 (wire_declaration -> WIRE IDENTIFIER SEMI .)
    ASSIGN          reduce using rule 10 (wire_declaration -> WIRE IDENTIFIER SEMI .)


state 26

    (11) assignment -> ASSIGN IDENTIFIER EQ . expression SEMI
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 28

state 27

    (34) expression -> IDENTIFIER .

    SEMI            reduce using rule 34 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 34 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 34 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 34 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 34 (expression -> IDENTIFIER .)
    AND             reduce using rule 34 (expression -> IDENTIFIER .)
    OR              reduce using rule 34 (expression -> IDENTIFIER .)
    EQEQ            reduce using rule 34 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 34 (expression -> IDENTIFIER .)
    LT              reduce using rule 34 (expression -> IDENTIFIER .)
    LE              reduce using rule 34 (expression -> IDENTIFIER .)
    GT              reduce using rule 34 (expression -> IDENTIFIER .)
    GE              reduce using rule 34 (expression -> IDENTIFIER .)
    BITAND          reduce using rule 34 (expression -> IDENTIFIER .)
    BITOR           reduce using rule 34 (expression -> IDENTIFIER .)
    BITXOR          reduce using rule 34 (expression -> IDENTIFIER .)
    LSHIFT          reduce using rule 34 (expression -> IDENTIFIER .)
    RSHIFT          reduce using rule 34 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 34 (expression -> IDENTIFIER .)


state 28

    (11) assignment -> ASSIGN IDENTIFIER EQ expression . SEMI
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . AND expression
    (17) expression -> expression . OR expression
    (18) expression -> expression . EQEQ expression
    (19) expression -> expression . NEQ expression
    (20) expression -> expression . LT expression
    (21) expression -> expression . LE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . GE expression
    (24) expression -> expression . BITAND expression
    (25) expression -> expression . BITOR expression
    (26) expression -> expression . BITXOR expression
    (27) expression -> expression . LSHIFT expression
    (28) expression -> expression . RSHIFT expression

    SEMI            shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40
    EQEQ            shift and go to state 41
    NEQ             shift and go to state 42
    LT              shift and go to state 43
    LE              shift and go to state 44
    GT              shift and go to state 45
    GE              shift and go to state 46
    BITAND          shift and go to state 47
    BITOR           shift and go to state 48
    BITXOR          shift and go to state 49
    LSHIFT          shift and go to state 50
    RSHIFT          shift and go to state 51


state 29

    (29) expression -> MINUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 52

state 30

    (30) expression -> NOT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 53

state 31

    (31) expression -> BITNOT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 54

state 32

    (32) expression -> LPAREN . expression RPAREN
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 55

state 33

    (33) expression -> NUMBER .

    SEMI            reduce using rule 33 (expression -> NUMBER .)
    PLUS            reduce using rule 33 (expression -> NUMBER .)
    MINUS           reduce using rule 33 (expression -> NUMBER .)
    TIMES           reduce using rule 33 (expression -> NUMBER .)
    DIVIDE          reduce using rule 33 (expression -> NUMBER .)
    AND             reduce using rule 33 (expression -> NUMBER .)
    OR              reduce using rule 33 (expression -> NUMBER .)
    EQEQ            reduce using rule 33 (expression -> NUMBER .)
    NEQ             reduce using rule 33 (expression -> NUMBER .)
    LT              reduce using rule 33 (expression -> NUMBER .)
    LE              reduce using rule 33 (expression -> NUMBER .)
    GT              reduce using rule 33 (expression -> NUMBER .)
    GE              reduce using rule 33 (expression -> NUMBER .)
    BITAND          reduce using rule 33 (expression -> NUMBER .)
    BITOR           reduce using rule 33 (expression -> NUMBER .)
    BITXOR          reduce using rule 33 (expression -> NUMBER .)
    LSHIFT          reduce using rule 33 (expression -> NUMBER .)
    RSHIFT          reduce using rule 33 (expression -> NUMBER .)
    RPAREN          reduce using rule 33 (expression -> NUMBER .)


state 34

    (11) assignment -> ASSIGN IDENTIFIER EQ expression SEMI .

    ENDMODULE       reduce using rule 11 (assignment -> ASSIGN IDENTIFIER EQ expression SEMI .)
    WIRE            reduce using rule 11 (assignment -> ASSIGN IDENTIFIER EQ expression SEMI .)
    ASSIGN          reduce using rule 11 (assignment -> ASSIGN IDENTIFIER EQ expression SEMI .)


state 35

    (12) expression -> expression PLUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 56

state 36

    (13) expression -> expression MINUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 57

state 37

    (14) expression -> expression TIMES . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 58

state 38

    (15) expression -> expression DIVIDE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 59

state 39

    (16) expression -> expression AND . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 60

state 40

    (17) expression -> expression OR . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 61

state 41

    (18) expression -> expression EQEQ . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 62

state 42

    (19) expression -> expression NEQ . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression EQEQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression BITAND expression
    (25) expression -> . expression BITOR expression
    (26) expression -> . expression BITXOR expression
    (27) expression -> . expression LSHIFT expression
    (28) expression -> . expression RSHIFT expression
    (29) expression -> . MINUS expression
    (30) expression -> . NOT expression
    (31) expression -> . BITNOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER

    MINUS           shift and go to state 29
    NOT             shift and go to state 30
    BITNOT          shift and go to state 31
    LPAREN          shift and go to state 32
    NUMBER          shift and go to state 33
    IDENTIFIER      shift and go to state 27

    expression                     shift and go to state 63

state 43
